# tristancacqueray.github.io

./: .gitattributes  .htaccess  BEAM.md  CNAME  HM.md  LISP.md  ML.md  Makefile  README.md  REST.md  Render.hs  Shakefile.hs  acid-jazz.md  agda.md  ats.md  baduk-trainer.md  blog.html  blog.xml  boolean-algebra.md  cabal-project.md  cabal.project  category-theory.md  code-review.md  communication-protocol.md  computer-graphic.md  computer-graphics.md  container.md  context-free-art.md  continuous-integration.md  contributions.html  css.md  daw.md  dear-imgui.md  declarative-programing.md  dependently-typed.md  devenv.md  dhall.md  electronic-music.md  elixir.md  elm.md  (+85 more)
-/: all.html  export.json  stork.st  tags.html  tasks.html
blog/: beautiful-haskell.html  broadcasting-webm.html  broadcasting-webm.lhs  butler-ot.html  cabal-project.html  dear-imgui.html  dear-imgui.lhs  emacs-30.html  float-controller.html  float-controller.lhs  forwarding-ssh-agent-through-websockets.html  from-ivy-to-vertico.html  functor-map.html  haskell-inline-c-pipewire.html  haskell-use-cases.html  icfpc2023.html  icfpc2024.html  introducing-animation-fractal.html  introducing-butler.html  introducing-effects.html  introducing-functional-programming-to-pythonistas.html  kubernetes-resources-update.html  live-reloading-haskell-gui-from-scratch.html  logreduce-capn-proto.html  logreduce-rust-part1.html  logreduce-rust-part2.html  logreduce-rust-part3.html  logreduce-rust-part4.html  logreduce-web-interface-wasm.html  making-of-microX.html  making-of-op961.html  massiv-vulkan-capture.html  no-frills-daily-project-management-with-org-mode.html  pulse-simple-pcm.html  recursive-namespaces.html  review-workflow.html  servant-oauth.html  state-monad.html  (+8 more)
src/: Audio.hs  Medias.hs  Mitadi.hs  PostFixup.hs  Project.hs  README.md  Render.hs  Toot.hs  Utils.hs  WebComponents.hs  mitadi.cabal
(+783 files in other folders)
